# Dynamic-2DGS

./: .gitignore  cam_utils.py  convert.py  full_eval.py  lap_deform.py  metrics.py  metrics_mesh.py  pyproject.toml  read_gt_mesh.py  render.py  render_mesh.py  render_mesh_trajectory.py  requirements.txt  train.py  train_gui.py  train_gui_utils.py
arguments/: __init__.py
data_tools/: colmap2nerf.py  interactive_invoke.py  phone_catch.py
gaussian_renderer/: __init__.py
lpipsPyTorch/: __init__.py
lpipsPyTorch/modules/: networks.py  utils.py
mesh_renderer/: __init__.py  util.py
scene/: __init__.py  cameras.py  colmap_loader.py  dataset_readers.py  deform_model.py  gaussian_model copy.py  gaussian_model.py
script/: train_dnerf.sh  train_dnerf_mlp.sh
submodules/diff-gaussian-rasterization/: setup.py
submodules/diff-gaussian-rasterization/diff_gaussian_rasterization/: __init__.py
submodules/diff-surfel-rasterization/: setup.py
submodules/diff-surfel-rasterization/diff_surfel_rasterization/: __init__.py
utils/: arap_deform.py  camera_utils.py  deform_utils.py  dual_quaternion.py  general_utils.py  image_utils.py  interactive_utils.py  loss_utils.py  mesh_utils.py  other_utils.py  point_utils.py  pose_utils.py  preprocess.py  render_utils.py  sh_utils.py  system_utils.py  time_utils.py  vis_utils.py
utils/makefig/: fangda_image.py  fanzhuan.py  marge_img.py
