[project]
name = "dynamic-2dgs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "dearpygui>=2.0.0",
    "ipdb>=0.13.13",
    "protobuf==4.25.3",
    "tensorboard>=2.14.0",
    "torch==2.1.0",
    "torchaudio==2.1",
    "torchvision==0.16",
]
